--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<nav>
+    <a routerLink="/login">Login</a>
+    <a routerLink="/register">Register</a>
+    <a routerLink="/expenses">Expenses</a>
+    <a routerLink="/add-expense">Add Expense</a>
+  </nav>
