--- a/src/app/auth/user-login/user-login.component.html
+++ b/src/app/auth/user-login/user-login.component.html
@@ -1,1 +1,39 @@
-<p>user-login works!</p>
+<div class="container">
+  <h2>Login</h2>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label for="email">Email</label>
+      <input id="email" formControlName="email" type="email" />
+      <div
+        *ngIf="
+          loginForm.controls['email'].invalid &&
+          loginForm.controls['email'].touched
+        "
+        class="error-message"
+      >
+        <small *ngIf="loginForm.controls['email']?.errors?.['required']"
+          >Email is required.</small
+        >
+        <small *ngIf="loginForm.controls['email']?.errors?.['email']"
+          >Invalid email format.</small
+        >
+      </div>
+    </div>
+    <div>
+      <label for="password">Password</label>
+      <input id="password" formControlName="password" type="password" />
+      <div
+        *ngIf="
+          loginForm.controls['password'].invalid &&
+          loginForm.controls['password'].touched
+        "
+        class="error-message"
+      >
+        <small *ngIf="loginForm.controls['password']?.errors?.['required']"
+          >Password is required.</small
+        >
+      </div>
+    </div>
+    <button type="submit" [disabled]="loginForm.invalid">Login</button>
+  </form>
+</div>
