--- a/src/app/auth/user-registration/user-registration.component.html
+++ b/src/app/auth/user-registration/user-registration.component.html
@@ -3,28 +3,144 @@
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <div>
       <label for="firstName">First Name</label>
-      <input id="firstName" formControlName="firstName" type="text" />
+      <input
+        id="firstName"
+        formControlName="firstName"
+        type="text"
+        aria-describedby="firstName"
+        tabindex="0"
+      />
+      <div
+        *ngIf="
+          userForm.controls['firstName'].invalid &&
+          userForm.controls['firstName'].touched
+        "
+      >
+        <small *ngIf="userForm.controls['firstName']?.errors?.['required']"
+          >First Name is required.</small
+        >
+        <small *ngIf="userForm.controls['firstName']?.errors?.['pattern']"
+          >Invalid First Name.</small
+        >
+      </div>
     </div>
     <div>
       <label for="lastName">Last Name</label>
-      <input id="lastName" formControlName="lastName" type="text" />
+      <input
+        id="lastName"
+        formControlName="lastName"
+        type="text"
+        aria-describedby="lastName"
+        tabindex="0"
+      />
+      <div
+        *ngIf="
+          userForm.controls['lastName'].invalid &&
+          userForm.controls['lastName'].touched
+        "
+      >
+        <small *ngIf="userForm.controls['lastName']?.errors?.['required']"
+          >Last Name is required.</small
+        >
+        <small *ngIf="userForm.controls['lastName']?.errors?.['pattern']"
+          >Invalid Last Name.</small
+        >
+      </div>
     </div>
     <div>
       <label for="email">Email</label>
-      <input id="email" formControlName="email" type="email" />
+      <input
+        id="email"
+        formControlName="email"
+        type="email"
+        aria-describedby="email"
+        tabindex="0"
+      />
+      <div
+        *ngIf="
+          userForm.controls['email'].invalid &&
+          userForm.controls['email'].touched
+        "
+      >
+        <small *ngIf="userForm.controls['email']?.errors?.['required']"
+          >Email is required.</small
+        >
+        <small *ngIf="userForm.controls['email']?.errors?.['email']"
+          >Invalid Email.</small
+        >
+      </div>
     </div>
     <div>
       <label for="password">Password</label>
-      <input id="password" formControlName="password" type="password" />
+      <input
+        id="password"
+        formControlName="password"
+        type="password"
+        aria-describedby="password"
+        tabindex="0"
+      />
+      <div
+        *ngIf="
+          userForm.controls['password'].invalid &&
+          userForm.controls['password'].touched
+        "
+      >
+        <small *ngIf="userForm.controls['password']?.errors?.['required']"
+          >Password is required.</small
+        >
+        <small *ngIf="userForm.controls['password']?.errors?.['minlength']"
+          >Password must be at least 6 characters.</small
+        >
+      </div>
     </div>
     <div>
       <label for="budgetLimit">Budget Limit</label>
-      <input id="budgetLimit" formControlName="budgetLimit" type="number" />
+      <input
+        id="budgetLimit"
+        formControlName="budgetLimit"
+        type="number"
+        aria-describedby="budgetLimit"
+        tabindex="0"
+      />
+      <div
+        *ngIf="
+          userForm.controls['budgetLimit'].invalid &&
+          userForm.controls['budgetLimit'].touched
+        "
+      >
+        <small *ngIf="userForm.controls['budgetLimit']?.errors?.['required']"
+          >Budget Limit is required.</small
+        >
+        <small *ngIf="userForm.controls['budgetLimit']?.errors?.['min']"
+          >Budget Limit cannot be negative.</small
+        >
+      </div>
     </div>
     <div>
       <label for="balance">Balance</label>
-      <input id="balance" formControlName="balance" type="number" />
+      <input
+        id="balance"
+        formControlName="balance"
+        type="number"
+        aria-describedby="balance"
+        tabindex="0"
+      />
+      <div
+        *ngIf="
+          userForm.controls['balance'].invalid &&
+          userForm.controls['balance'].touched
+        "
+      >
+        <small *ngIf="userForm.controls['balance']?.errors?.['required']"
+          >Balance is required.</small
+        >
+        <small *ngIf="userForm.controls['balance']?.errors?.['min']"
+          >Balance cannot be negative.</small
+        >
+      </div>
     </div>
-    <button type="submit" [disabled]="!userForm.valid">Register</button>
+    <button type="submit" [disabled]="!userForm.valid" tabindex="0">
+      Register
+    </button>
   </form>
 </div>
