--- a/src/app/auth/user-registration/user-registration.component.scss
+++ b/src/app/auth/user-registration/user-registration.component.scss
@@ -8,18 +8,15 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: $container_bg;
-
   h2 {
     text-align: center;
     margin-bottom: 20px;
   }
-
   form {
     label {
       display: block;
       margin-bottom: 5px;
     }
-
     input {
       width: 100%;
       padding: 8px;
@@ -27,8 +24,21 @@
       border: 1px solid #ccc;
       border-radius: 3px;
       box-sizing: border-box;
+      &:focus {
+        border-color: #007bff;
+        outline: none;
+      }
+      
     }
-
+    small {
+      color: $btn-error-msg;
+      font-size: 0.875rem;
+      display: block;
+      margin-top: 0.25rem;
+    }
+    .ng-invalid.ng-touched {
+      border-color: $btn-error-msg;
+    }
     button {
       width: 100%;
       padding: 10px;
@@ -38,15 +48,21 @@
       border: none;
       border-radius: 3px;
       cursor: pointer;
-
       &:hover {
         background-color: $hover-btn-bg-color;
       }
-
       &:disabled {
         background-color: #ccc;
         cursor: not-allowed;
       }
     }
   }
+  div {
+    margin-bottom: 1rem;
+    &.form-group {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  
 }
